# lxqt_wallet

./: BUILD_INSTRUCTIONS  CMakeLists.txt  LICENSE  Makefile  README.md  changelog  changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  lxqt_internal_wallet.cpp  lxqt_internal_wallet.h  lxqt_kwallet.cpp  lxqt_kwallet.h  lxqt_wallet.pro  lxqt_wallet_interface.cpp  lxqt_wallet_interface.h  lxqt_wallet_manager.h  lxqtwallet.c  lxqtwallet.h  main.cpp  main_application.cpp  main_application.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  open_wallet_thread.cpp  open_wallet_thread.h  password_dialog.cpp  password_dialog.h  password_dialog.ui  storage_manager.h  wallet.c  wallet_manager.pro
backend/: CMakeLists.txt  lxqt-wallet.h  lxqt_wallet-cli.c  lxqtwallet.c  lxqtwallet.h
doc/: README  lxqt_wallet_header_structure.odg  wallets_encryption_decryption_process.odg
frontend/: CMakeLists.txt  README  changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  icons.qrc  lxqt_internal_wallet.cpp  lxqt_internal_wallet.h  lxqt_kwallet-dbus.cpp  lxqt_kwallet.cpp  lxqt_kwallet.h  lxqt_libsecret.cpp  lxqt_libsecret.h  lxqt_osx_keychain.cpp  lxqt_osx_keychain.h  lxqt_secret_service.cpp  lxqt_secret_service.h  lxqt_wallet.cpp  lxqt_wallet.h  lxqt_wallet_interface.cpp  lxqt_wallet_interface.h  lxqt_windows_dpapi.cpp  open_wallet_thread.cpp  open_wallet_thread.h  password_dialog.cpp  password_dialog.h  password_dialog.ui  secret_service.c  secret_service.h  task.cpp  task.h
frontend/libsecret/: CMakeLists.txt
test/: README  mainwindow.cpp  mainwindow.h  wallet.c
translations/: lxqt-wallet_ar.ts  lxqt-wallet_bg.ts  lxqt-wallet_ca.ts  lxqt-wallet_cs.ts  lxqt-wallet_da.ts  lxqt-wallet_de.ts  lxqt-wallet_de_DE.ts  lxqt-wallet_el.ts  lxqt-wallet_en_GB.ts  lxqt-wallet_eo.ts  lxqt-wallet_es.ts  lxqt-wallet_es_ES.ts  lxqt-wallet_et.ts  lxqt-wallet_fi.ts  lxqt-wallet_fr.ts  lxqt-wallet_fr_FR.ts  lxqt-wallet_fur.ts  lxqt-wallet_gr_GR.ts  lxqt-wallet_he.ts  lxqt-wallet_hi.ts  lxqt-wallet_hu.ts  lxqt-wallet_it.ts  lxqt-wallet_ja.ts  lxqt-wallet_ka.ts  lxqt-wallet_kab.ts  lxqt-wallet_ko.ts  lxqt-wallet_lt.ts  lxqt-wallet_nb_NO.ts  lxqt-wallet_nl.ts  lxqt-wallet_nl_NL.ts  lxqt-wallet_pa.ts  lxqt-wallet_pl.ts  lxqt-wallet_pl_PL.ts  lxqt-wallet_pt.ts  lxqt-wallet_pt_PT.ts  lxqt-wallet_ru.ts  lxqt-wallet_si.ts  lxqt-wallet_sk.ts  lxqt-wallet_tr.ts  lxqt-wallet_uk.ts  (+6 more)
translations.qm/: dutch_NL.qm  french_FR.qm  german_DE.qm  greek_GR.qm  spanish_ES.qm
translations.ts/: dutch_NL.ts  french_FR.ts  german_DE.ts  greek_GR.ts  spanish_ES.ts  translations.ts
